@@ -1,9 +1,8 @@
 package io.quarkus.arc.processor;
 
-import static org.objectweb.asm.Opcodes.ACC_FINAL;
-import static org.objectweb.asm.Opcodes.ACC_PRIVATE;
-import static org.objectweb.asm.Opcodes.ACC_PUBLIC;
+import static org.jboss.jandex.gizmo2.Jandex2Gizmo.classDescOf;
 
+import java.lang.constant.ClassDesc;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -14,6 +13,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.BiFunction;
+import java.util.function.Consumer;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
@@ -27,22 +27,22 @@ import org.jboss.jandex.MethodInfo;
 import org.jboss.jandex.Type;
 
 import io.quarkus.arc.ArcInvocationContext;
+import io.quarkus.arc.InjectableBean;
 import io.quarkus.arc.InjectableInterceptor;
 import io.quarkus.arc.InterceptorCreator.InterceptFunction;
 import io.quarkus.arc.processor.BeanProcessor.PrivateMembersCollector;
 import io.quarkus.arc.processor.ResourceOutput.Resource;
 import io.quarkus.arc.processor.ResourceOutput.Resource.SpecialType;
-import io.quarkus.gizmo.BranchResult;
-import io.quarkus.gizmo.BytecodeCreator;
-import io.quarkus.gizmo.ClassCreator;
-import io.quarkus.gizmo.ClassOutput;
-import io.quarkus.gizmo.FieldCreator;
-import io.quarkus.gizmo.FieldDescriptor;
-import io.quarkus.gizmo.FunctionCreator;
-import io.quarkus.gizmo.Gizmo;
-import io.quarkus.gizmo.MethodCreator;
-import io.quarkus.gizmo.MethodDescriptor;
-import io.quarkus.gizmo.ResultHandle;
+import io.quarkus.gizmo2.Const;
+import io.quarkus.gizmo2.Expr;
+import io.quarkus.gizmo2.FieldVar;
+import io.quarkus.gizmo2.Gizmo;
+import io.quarkus.gizmo2.LocalVar;
+import io.quarkus.gizmo2.ParamVar;
+import io.quarkus.gizmo2.creator.BlockCreator;
+import io.quarkus.gizmo2.creator.ClassCreator;
+import io.quarkus.gizmo2.desc.ClassMethodDesc;
+import io.quarkus.gizmo2.desc.FieldDesc;
 
 /**
  *
@@ -61,27 +61,22 @@ public class InterceptorGenerator extends BeanGenerator {
     }
 
     /**
-     * Precompute the generated name for the given interceptor so that the {@link ComponentsProviderGenerator} can be executed
-     * before all interceptors metadata are generated.
+     * Precompute the generated name for the given interceptor so that the {@link ComponentsProviderGenerator}
+     * can be executed before all interceptors metadata are generated.
      *
      * @param interceptor
      */
     void precomputeGeneratedName(InterceptorInfo interceptor) {
-        ProviderType providerType = new ProviderType(interceptor.getProviderType());
         String baseName;
         String targetPackage;
         if (interceptor.isSynthetic()) {
             DotName creatorClassName = DotName.createSimple(interceptor.getCreatorClass());
             baseName = InterceptFunction.class.getSimpleName() + "_" + interceptor.getIdentifier();
-            targetPackage = DotNames.packageName(creatorClassName);
+            targetPackage = DotNames.packagePrefix(creatorClassName);
         } else {
             ClassInfo interceptorClass = interceptor.getTarget().get().asClass();
-            if (interceptorClass.enclosingClass() != null) {
-                baseName = DotNames.simpleName(interceptorClass.enclosingClass()) + "_" + DotNames.simpleName(interceptorClass);
-            } else {
-                baseName = DotNames.simpleName(interceptorClass);
-            }
-            targetPackage = DotNames.packageName(providerType.name());
+            baseName = interceptorClass.name().withoutPackagePrefix();
+            targetPackage = DotNames.packagePrefix(interceptor.getProviderType().name());
         }
         beanToGeneratedBaseName.put(interceptor, baseName);
         String generatedName = generatedNameFromTarget(targetPackage, baseName, BEAN_SUFFIX);
@@ -94,332 +89,281 @@ public class InterceptorGenerator extends BeanGenerator {
      * @return a collection of resources
      */
     Collection<Resource> generate(InterceptorInfo interceptor) {
-        return interceptor.isSynthetic() ? generateSyntheticInterceptor(interceptor) : generateClassInterceptor(interceptor);
-    }
+        DotName targetPackageClassName = interceptor.isSynthetic()
+                ? DotName.createSimple(interceptor.getCreatorClass())
+                : interceptor.getProviderType().name();
+        DotName isApplicationClassName = interceptor.isSynthetic()
+                ? targetPackageClassName
+                : interceptor.getBeanClass();
 
-    private Collection<Resource> generateSyntheticInterceptor(InterceptorInfo interceptor) {
-        ProviderType providerType = new ProviderType(interceptor.getProviderType());
-        DotName creatorClassName = DotName.createSimple(interceptor.getCreatorClass());
         String baseName = beanToGeneratedBaseName.get(interceptor);
-        String targetPackage = DotNames.packageName(creatorClassName);
+        String targetPackage = DotNames.packagePrefix(targetPackageClassName);
         String generatedName = beanToGeneratedName.get(interceptor);
 
         if (existingClasses.contains(generatedName)) {
             return Collections.emptyList();
         }
 
-        boolean isApplicationClass = applicationClassPredicate.test(creatorClassName) || interceptor.isForceApplicationClass();
-        ResourceClassOutput classOutput = new ResourceClassOutput(isApplicationClass,
-                name -> name.equals(generatedName) ? SpecialType.INTERCEPTOR_BEAN : null, generateSources);
-
-        // MyInterceptor_Bean implements InjectableInterceptor<T>
-        ClassCreator interceptorBean = ClassCreator.builder().classOutput(classOutput).className(generatedName)
-                .interfaces(InjectableInterceptor.class, Supplier.class)
-                .build();
-
-        // Fields
-        FieldCreator beanTypes = interceptorBean.getFieldCreator(FIELD_NAME_BEAN_TYPES, Set.class)
-                .setModifiers(ACC_PRIVATE | ACC_FINAL);
-        FieldCreator bindings = interceptorBean.getFieldCreator(FIELD_NAME_BINDINGS, Set.class)
-                .setModifiers(ACC_PRIVATE | ACC_FINAL);
-
-        Map<InjectionPointInfo, String> injectionPointToProviderField = new HashMap<>();
-        initMaps(interceptor, injectionPointToProviderField, Collections.emptyMap(), Collections.emptyMap());
-
-        createProviderFields(interceptorBean, interceptor, injectionPointToProviderField, Collections.emptyMap(),
-                Collections.emptyMap());
-        MethodCreator constructor = createConstructor(classOutput, interceptorBean, interceptor, injectionPointToProviderField,
-                bindings.getFieldDescriptor(), reflectionRegistration, isApplicationClass, providerType);
-        SyntheticComponentsUtil.addParamsFieldAndInit(interceptorBean, constructor, interceptor.getParams(), annotationLiterals,
-                interceptor.getDeployment().getBeanArchiveIndex());
-        constructor.returnValue(null);
-
-        implementGetIdentifier(interceptor, interceptorBean);
-        implementSupplierGet(interceptorBean);
-        implementCreate(classOutput, interceptorBean, interceptor, providerType, baseName,
-                injectionPointToProviderField,
-                Collections.emptyMap(), Collections.emptyMap(),
-                targetPackage, isApplicationClass);
-        implementGet(interceptor, interceptorBean, providerType, baseName);
-        implementGetTypes(interceptorBean, beanTypes.getFieldDescriptor());
-        implementGetBeanClass(interceptor, interceptorBean);
-        // Interceptors are always @Dependent and have always default qualifiers
-
-        // InjectableInterceptor methods
-        implementGetInterceptorBindings(interceptorBean, bindings.getFieldDescriptor());
-        implementIntercepts(interceptorBean, interceptor);
-        implementIntercept(interceptorBean, interceptor, providerType, reflectionRegistration, isApplicationClass);
-        implementGetPriority(interceptorBean, interceptor);
-
-        implementEquals(interceptor, interceptorBean);
-        implementHashCode(interceptor, interceptorBean);
-
-        interceptorBean.close();
-        return classOutput.getResources();
-    }
-
-    private Collection<Resource> generateClassInterceptor(InterceptorInfo interceptor) {
-        ProviderType providerType = new ProviderType(interceptor.getProviderType());
-        String baseName = beanToGeneratedBaseName.get(interceptor);
-        String targetPackage = DotNames.packageName(providerType.name());
-        String generatedName = beanToGeneratedName.get(interceptor);
-
-        if (existingClasses.contains(generatedName)) {
-            return Collections.emptyList();
-        }
-
-        boolean isApplicationClass = applicationClassPredicate.test(interceptor.getBeanClass())
+        boolean isApplicationClass = applicationClassPredicate.test(isApplicationClassName)
                 || interceptor.isForceApplicationClass();
         ResourceClassOutput classOutput = new ResourceClassOutput(isApplicationClass,
                 name -> name.equals(generatedName) ? SpecialType.INTERCEPTOR_BEAN : null, generateSources);
 
-        // MyInterceptor_Bean implements InjectableInterceptor<T>
-        ClassCreator interceptorCreator = ClassCreator.builder().classOutput(classOutput).className(generatedName)
-                .interfaces(InjectableInterceptor.class, Supplier.class)
-                .build();
+        Gizmo gizmo = gizmo(classOutput);
 
-        // Fields
-        FieldCreator beanTypes = interceptorCreator.getFieldCreator(FIELD_NAME_BEAN_TYPES, Set.class)
-                .setModifiers(ACC_PRIVATE | ACC_FINAL);
-        FieldCreator bindings = interceptorCreator.getFieldCreator(FIELD_NAME_BINDINGS, Set.class)
-                .setModifiers(ACC_PRIVATE | ACC_FINAL);
+        generateInterceptor(gizmo, interceptor, generatedName, baseName, targetPackage, isApplicationClass);
 
-        Map<InjectionPointInfo, String> injectionPointToProviderField = new HashMap<>();
-        initMaps(interceptor, injectionPointToProviderField, Collections.emptyMap(), Collections.emptyMap());
-
-        createProviderFields(interceptorCreator, interceptor, injectionPointToProviderField, Collections.emptyMap(),
-                Collections.emptyMap());
-        createConstructor(classOutput, interceptorCreator, interceptor, injectionPointToProviderField,
-                bindings.getFieldDescriptor(), reflectionRegistration, isApplicationClass, providerType).returnValue(null);
-
-        implementGetIdentifier(interceptor, interceptorCreator);
-        implementSupplierGet(interceptorCreator);
-        implementCreate(classOutput, interceptorCreator, interceptor, providerType, baseName,
-                injectionPointToProviderField,
-                Collections.emptyMap(), Collections.emptyMap(),
-                targetPackage, isApplicationClass);
-        implementGet(interceptor, interceptorCreator, providerType, baseName);
-        implementGetTypes(interceptorCreator, beanTypes.getFieldDescriptor());
-        implementGetBeanClass(interceptor, interceptorCreator);
-        // Interceptors are always @Dependent and have always default qualifiers
-
-        // InjectableInterceptor methods
-        implementGetInterceptorBindings(interceptorCreator, bindings.getFieldDescriptor());
-        implementIntercepts(interceptorCreator, interceptor);
-        implementIntercept(interceptorCreator, interceptor, providerType, reflectionRegistration, isApplicationClass);
-        implementGetPriority(interceptorCreator, interceptor);
-
-        implementEquals(interceptor, interceptorCreator);
-        implementHashCode(interceptor, interceptorCreator);
-
-        interceptorCreator.close();
         return classOutput.getResources();
     }
 
-    protected MethodCreator createConstructor(ClassOutput classOutput, ClassCreator creator, InterceptorInfo interceptor,
-            Map<InjectionPointInfo, String> injectionPointToProviderField, FieldDescriptor bindings,
-            ReflectionRegistration reflectionRegistration, boolean isApplicationClass, ProviderType providerType) {
+    private void generateInterceptor(Gizmo gizmo, InterceptorInfo interceptor, String generatedName, String baseName,
+            String targetPackage, boolean isApplicationClass) {
+        gizmo.class_(generatedName, cc -> {
+            cc.implements_(InjectableInterceptor.class);
+            cc.implements_(Supplier.class);
 
-        MethodCreator constructor = initConstructor(classOutput, creator, interceptor, injectionPointToProviderField,
-                Collections.emptyMap(), Collections.emptyMap(), annotationLiterals, reflectionRegistration);
+            FieldDesc beanTypesField = cc.field(FIELD_NAME_BEAN_TYPES, fc -> {
+                fc.private_();
+                fc.final_();
+                fc.setType(Set.class);
+            });
+            FieldDesc bindingsField = cc.field(FIELD_NAME_BINDINGS, fc -> {
+                fc.private_();
+                fc.final_();
+                fc.setType(Set.class);
+            });
+            Map<InjectionPointInfo, FieldDesc> injectionPointToProviderField = new HashMap<>();
+            generateProviderFields(interceptor, cc, injectionPointToProviderField, Map.of(), Map.of());
 
-        // Bindings
-        // bindings = new HashSet<>()
-        ResultHandle bindingsHandle = constructor.newInstance(MethodDescriptor.ofConstructor(HashSet.class));
+            generateConstructor(cc, interceptor, beanTypesField, bindingsField, injectionPointToProviderField,
+                    isApplicationClass, interceptor.isSynthetic() ? bc -> {
+                        SyntheticComponentsUtil.addParamsFieldAndInit(cc, bc, interceptor.getParams(),
+                                annotationLiterals, interceptor.getDeployment().getBeanArchiveIndex());
+                    } : ignored -> {
+                    });
 
-        for (AnnotationInstance bindingAnnotation : interceptor.getBindings()) {
-            // Create annotation literal first
-            ClassInfo bindingClass = interceptor.getDeployment().getInterceptorBinding(bindingAnnotation.name());
-            constructor.invokeInterfaceMethod(MethodDescriptors.SET_ADD, bindingsHandle,
-                    annotationLiterals.create(constructor, bindingClass, bindingAnnotation));
-        }
-        constructor.writeInstanceField(bindings, constructor.getThis(), bindingsHandle);
+            generateCreate(cc, interceptor, new ProviderType(interceptor.getProviderType()), baseName,
+                    injectionPointToProviderField, Map.of(), Map.of(), targetPackage, isApplicationClass);
 
-        // Initialize a list of BiFunction for each interception type if multiple interceptor methods are declared in a hierarchy
-        initInterceptorMethodsField(creator, constructor, InterceptionType.AROUND_INVOKE, interceptor.getAroundInvokes(),
-                providerType.className(), isApplicationClass);
-        initInterceptorMethodsField(creator, constructor, InterceptionType.AROUND_CONSTRUCT, interceptor.getAroundConstructs(),
-                providerType.className(), isApplicationClass);
-        initInterceptorMethodsField(creator, constructor, InterceptionType.POST_CONSTRUCT, interceptor.getPostConstructs(),
-                providerType.className(), isApplicationClass);
-        initInterceptorMethodsField(creator, constructor, InterceptionType.PRE_DESTROY, interceptor.getPreDestroys(),
-                providerType.className(), isApplicationClass);
+            generateSupplierGet(cc);
+            generateInjectableReferenceProviderGet(interceptor, cc, baseName);
+            generateGetIdentifier(cc, interceptor);
+            generateGetTypes(beanTypesField, cc);
+            // always `@Dependent` -- no need to `generateGetScope()`
+            // always default qualifiers -- no need to `generateGetQualifiers()`
+            // never an alternative -- no need to `generateIsAlternative()`
+            generateGetPriority(cc, interceptor);
+            // never any stereotypes -- no need to `generateGetStereotypes()`
+            generateGetBeanClass(cc, interceptor);
+            // never named -- no need to `generateGetName()`
+            // never default bean -- no need to `generateIsDefaultBean()`
+            // `InjectableInterceptor.getKind()` always returns `Kind.INTERCEPTOR` -- no need to `generateGetKind()`
+            // never suppressed -- no need to `generateIsSuppressed()`
+            generateGetInjectionPoints(cc, interceptor);
+            generateEquals(cc, interceptor);
+            generateHashCode(cc, interceptor);
+            generateToString(cc);
 
-        return constructor;
+            generateGetInterceptorBindings(cc, bindingsField);
+            generateIntercepts(cc, interceptor);
+            generateIntercept(cc, interceptor, isApplicationClass);
+        });
     }
 
-    private void initInterceptorMethodsField(ClassCreator creator, MethodCreator constructor, InterceptionType interceptionType,
-            List<MethodInfo> methods, String interceptorClass, boolean isApplicationClass) {
+    private void generateConstructor(ClassCreator cc, InterceptorInfo interceptor, FieldDesc beanTypesField,
+            FieldDesc bindingsField, Map<InjectionPointInfo, FieldDesc> injectionPointToProviderField,
+            boolean isApplicationClass, Consumer<BlockCreator> additionalCode) {
+        super.generateConstructor(cc, interceptor, beanTypesField, null, null, null, injectionPointToProviderField,
+                Map.of(), Map.of(), bc -> {
+                    LocalVar bindings = bc.localVar("bindings", bc.new_(HashSet.class));
+                    for (AnnotationInstance binding : interceptor.getBindings()) {
+                        ClassInfo bindingClass = interceptor.getDeployment().getInterceptorBinding(binding.name());
+                        bc.withSet(bindings).add(annotationLiterals.create(bc, bindingClass, binding));
+                    }
+                    bc.set(cc.this_().field(bindingsField), bindings);
+
+                    // Initialize a list of BiFunction for each interception type if multiple interceptor methods are declared in a hierarchy
+                    ClassDesc interceptorClass = classDescOf(interceptor.getProviderType());
+                    generateInterceptorMethodsField(cc, bc, InterceptionType.AROUND_INVOKE,
+                            interceptor.getAroundInvokes(), interceptorClass, isApplicationClass);
+                    generateInterceptorMethodsField(cc, bc, InterceptionType.AROUND_CONSTRUCT,
+                            interceptor.getAroundConstructs(), interceptorClass, isApplicationClass);
+                    generateInterceptorMethodsField(cc, bc, InterceptionType.POST_CONSTRUCT,
+                            interceptor.getPostConstructs(), interceptorClass, isApplicationClass);
+                    generateInterceptorMethodsField(cc, bc, InterceptionType.PRE_DESTROY,
+                            interceptor.getPreDestroys(), interceptorClass, isApplicationClass);
+
+                    additionalCode.accept(bc);
+                });
+    }
+
+    private void generateInterceptorMethodsField(ClassCreator cc, BlockCreator bc, InterceptionType interceptionType,
+            List<MethodInfo> methods, ClassDesc interceptorClass, boolean isApplicationClass) {
         if (methods.size() < 2) {
+            // if there's just one interceptor method, we'll generate a more streamlined code, see `generateIntercept()`
             return;
         }
-        FieldCreator field = creator.getFieldCreator(interceptorMethodsField(interceptionType), List.class)
-                .setModifiers(ACC_PRIVATE);
-        ResultHandle methodsList = constructor.newInstance(MethodDescriptor.ofConstructor(ArrayList.class));
-        for (MethodInfo method : methods) {
-            // BiFunction<Object,InvocationContext,Object>
-            FunctionCreator fun = constructor.createFunction(BiFunction.class);
-            BytecodeCreator funBytecode = fun.getBytecode();
-            ResultHandle ret = invokeInterceptorMethod(funBytecode, interceptorClass, method,
-                    interceptionType, isApplicationClass, funBytecode.getMethodParam(1),
-                    funBytecode.getMethodParam(0));
-            funBytecode.returnValue(interceptionType == InterceptionType.AROUND_INVOKE ? ret : funBytecode.loadNull());
-            constructor.invokeInterfaceMethod(MethodDescriptors.LIST_ADD, methodsList, fun.getInstance());
-        }
-        constructor.writeInstanceField(field.getFieldDescriptor(), constructor.getThis(), methodsList);
-    }
 
-    protected void implementGetBeanClass(InterceptorInfo interceptor, ClassCreator beanCreator) {
-        MethodCreator getBeanClass = beanCreator.getMethodCreator("getBeanClass", Class.class).setModifiers(ACC_PUBLIC);
-        getBeanClass.returnValue(getBeanClass.loadClass(
-                interceptor.isSynthetic() ? interceptor.getCreatorClass().getName() : interceptor.getBeanClass().toString()));
+        FieldDesc fieldDesc = cc.field(interceptorMethodsField(interceptionType), fc -> {
+            fc.private_();
+            fc.final_();
+            fc.setType(List.class);
+        });
+
+        LocalVar list = bc.localVar(fieldDesc.name(), bc.new_(ArrayList.class));
+        for (MethodInfo method : methods) {
+            Expr bifunc = bc.lambda(BiFunction.class, lc -> {
+                ParamVar interceptor = lc.parameter("interceptor", 0);
+                ParamVar invocationContext = lc.parameter("invocationContext", 1);
+                lc.body(lbc -> {
+                    Expr result = invokeInterceptorMethod(lbc, interceptorClass, method, interceptionType,
+                            isApplicationClass, invocationContext, interceptor);
+                    lbc.return_(interceptionType == InterceptionType.AROUND_INVOKE ? result : Const.ofNull(Object.class));
+                });
+            });
+            bc.withList(list).add(bifunc);
+        }
+        bc.set(cc.this_().field(fieldDesc), list);
     }
 
     /**
-     *
+     * @see InjectableBean#getBeanClass()
+     */
+    protected void generateGetBeanClass(ClassCreator cc, InterceptorInfo interceptor) {
+        cc.method("getBeanClass", mc -> {
+            mc.returning(Class.class);
+            mc.body(bc -> {
+                bc.return_(interceptor.isSynthetic()
+                        ? Const.of(interceptor.getCreatorClass())
+                        : Const.of(classDescOf(interceptor.getBeanClass())));
+            });
+        });
+    }
+
+    /**
      * @see InjectableInterceptor#getInterceptorBindings()
      */
-    protected void implementGetInterceptorBindings(ClassCreator creator, FieldDescriptor bindingsField) {
-        MethodCreator getBindings = creator.getMethodCreator("getInterceptorBindings", Set.class).setModifiers(ACC_PUBLIC);
-        getBindings.returnValue(getBindings.readInstanceField(bindingsField, getBindings.getThis()));
+    protected void generateGetInterceptorBindings(ClassCreator cc, FieldDesc bindingsField) {
+        cc.method("getInterceptorBindings", mc -> {
+            mc.returning(Set.class);
+            mc.body(bc -> {
+                bc.return_(cc.this_().field(bindingsField));
+            });
+        });
     }
 
     /**
-     *
-     * @see InjectableInterceptor#getPriority()
-     */
-    protected void implementGetPriority(ClassCreator creator, InterceptorInfo interceptor) {
-        MethodCreator getPriority = creator.getMethodCreator("getPriority", int.class).setModifiers(ACC_PUBLIC);
-        getPriority.returnValue(getPriority.load(interceptor.getPriority()));
-    }
-
-    /**
-     *
-     * @return the method
      * @see InjectableInterceptor#intercepts(jakarta.enterprise.inject.spi.InterceptionType)
      */
-    protected void implementIntercepts(ClassCreator creator, InterceptorInfo interceptor) {
-        MethodCreator intercepts = creator.getMethodCreator("intercepts", boolean.class, InterceptionType.class)
-                .setModifiers(ACC_PUBLIC);
-        if (interceptor.isSynthetic()) {
-            ResultHandle enumValue = intercepts
-                    .readStaticField(
-                            FieldDescriptor.of(InterceptionType.class.getName(), interceptor.getInterceptionType().name(),
-                                    InterceptionType.class.getName()));
-            BranchResult result = intercepts
-                    .ifTrue(Gizmo.equals(intercepts, enumValue, intercepts.getMethodParam(0)));
-            result.trueBranch().returnValue(result.trueBranch().load(true));
-        } else {
-            addIntercepts(interceptor, InterceptionType.AROUND_INVOKE, intercepts);
-            addIntercepts(interceptor, InterceptionType.POST_CONSTRUCT, intercepts);
-            addIntercepts(interceptor, InterceptionType.PRE_DESTROY, intercepts);
-            addIntercepts(interceptor, InterceptionType.AROUND_CONSTRUCT, intercepts);
-        }
-        intercepts.returnValue(intercepts.load(false));
+    protected void generateIntercepts(ClassCreator cc, InterceptorInfo interceptor) {
+        cc.method("intercepts", mc -> {
+            mc.returning(boolean.class);
+            ParamVar interceptionType = mc.parameter("interceptionType", InterceptionType.class);
+            mc.body(bc -> {
+                if (interceptor.isSynthetic()) {
+                    FieldVar enumValue = Expr.staticField(FieldDesc.of(InterceptionType.class,
+                            interceptor.getInterceptionType().name()));
+                    bc.return_(bc.eq(enumValue, interceptionType));
+                } else {
+                    generateIntercepts(interceptor, InterceptionType.AROUND_INVOKE, bc, interceptionType);
+                    generateIntercepts(interceptor, InterceptionType.POST_CONSTRUCT, bc, interceptionType);
+                    generateIntercepts(interceptor, InterceptionType.PRE_DESTROY, bc, interceptionType);
+                    generateIntercepts(interceptor, InterceptionType.AROUND_CONSTRUCT, bc, interceptionType);
+                    bc.returnFalse();
+                }
+            });
+        });
     }
 
-    private void addIntercepts(InterceptorInfo interceptor, InterceptionType interceptionType, MethodCreator intercepts) {
+    private void generateIntercepts(InterceptorInfo interceptor, InterceptionType interceptionType, BlockCreator bc,
+            ParamVar interceptionTypeParam) {
         if (interceptor.intercepts(interceptionType)) {
-            ResultHandle enumValue = intercepts
-                    .readStaticField(FieldDescriptor.of(InterceptionType.class.getName(), interceptionType.name(),
-                            InterceptionType.class.getName()));
-            BranchResult result = intercepts
-                    .ifTrue(Gizmo.equals(intercepts, enumValue, intercepts.getMethodParam(0)));
-            result.trueBranch().returnBoolean(true);
+            FieldVar enumValue = Expr.staticField(FieldDesc.of(InterceptionType.class, interceptionType.name()));
+            bc.if_(bc.eq(enumValue, interceptionTypeParam), BlockCreator::returnTrue);
         }
     }
 
     /**
-     *
      * @see InjectableInterceptor#intercept(InterceptionType, Object, jakarta.interceptor.InvocationContext)
      */
-    protected void implementIntercept(ClassCreator creator, InterceptorInfo interceptor, ProviderType providerType,
-            ReflectionRegistration reflectionRegistration, boolean isApplicationClass) {
-        MethodCreator intercept = creator
-                .getMethodCreator("intercept", Object.class, InterceptionType.class, Object.class, InvocationContext.class)
-                .setModifiers(ACC_PUBLIC).addException(Exception.class);
-
-        if (interceptor.isSynthetic()) {
-            BranchResult result = intercept
-                    .ifTrue(Gizmo.equals(intercept, intercept.load(interceptor.getInterceptionType()),
-                            intercept.getMethodParam(0)));
-            BytecodeCreator trueBranch = result.trueBranch();
-            ResultHandle interceptFunction = trueBranch.checkCast(trueBranch.getMethodParam(1), InterceptFunction.class);
-            trueBranch.returnValue(trueBranch.invokeInterfaceMethod(MethodDescriptors.INTERCEPT_FUNCTION_INTERCEPT,
-                    interceptFunction, trueBranch.getMethodParam(2)));
-        } else {
-            addIntercept(creator, intercept, interceptor.getAroundInvokes(), InterceptionType.AROUND_INVOKE, providerType,
-                    reflectionRegistration, isApplicationClass);
-            addIntercept(creator, intercept, interceptor.getPostConstructs(), InterceptionType.POST_CONSTRUCT, providerType,
-                    reflectionRegistration, isApplicationClass);
-            addIntercept(creator, intercept, interceptor.getPreDestroys(), InterceptionType.PRE_DESTROY, providerType,
-                    reflectionRegistration, isApplicationClass);
-            addIntercept(creator, intercept, interceptor.getAroundConstructs(), InterceptionType.AROUND_CONSTRUCT, providerType,
-                    reflectionRegistration, isApplicationClass);
-        }
-        intercept.returnValue(intercept.loadNull());
+    protected void generateIntercept(ClassCreator cc, InterceptorInfo interceptor, boolean isApplicationClass) {
+        cc.method("intercept", mc -> {
+            mc.returning(Object.class);
+            ParamVar interceptionType = mc.parameter("interceptionType", InterceptionType.class);
+            ParamVar interceptorInstance = mc.parameter("interceptorInstance", Object.class);
+            ParamVar invocationContext = mc.parameter("invocationContext", InvocationContext.class);
+            mc.body(b0 -> {
+                if (interceptor.isSynthetic()) {
+                    b0.if_(b0.eq(Const.of(interceptor.getInterceptionType()), interceptionType), b1 -> {
+                        Expr interceptFunction = b1.cast(interceptorInstance, InterceptFunction.class);
+                        b1.return_(b1.invokeInterface(MethodDescs.INTERCEPT_FUNCTION_INTERCEPT, interceptFunction,
+                                invocationContext));
+                    });
+                } else {
+                    ClassDesc interceptorClass = classDescOf(interceptor.getProviderType());
+                    generateIntercept(cc, b0, interceptor.getAroundInvokes(), InterceptionType.AROUND_INVOKE,
+                            interceptorClass, isApplicationClass, interceptionType, interceptorInstance, invocationContext);
+                    generateIntercept(cc, b0, interceptor.getPostConstructs(), InterceptionType.POST_CONSTRUCT,
+                            interceptorClass, isApplicationClass, interceptionType, interceptorInstance, invocationContext);
+                    generateIntercept(cc, b0, interceptor.getPreDestroys(), InterceptionType.PRE_DESTROY,
+                            interceptorClass, isApplicationClass, interceptionType, interceptorInstance, invocationContext);
+                    generateIntercept(cc, b0, interceptor.getAroundConstructs(), InterceptionType.AROUND_CONSTRUCT,
+                            interceptorClass, isApplicationClass, interceptionType, interceptorInstance, invocationContext);
+                }
+                b0.return_(Const.ofNull(Object.class));
+            });
+        });
     }
 
-    private void addIntercept(ClassCreator creator, MethodCreator intercept, List<MethodInfo> interceptorMethods,
-            InterceptionType interceptionType, ProviderType providerType, ReflectionRegistration reflectionRegistration,
-            boolean isApplicationClass) {
+    private void generateIntercept(ClassCreator cc, BlockCreator b0, List<MethodInfo> interceptorMethods,
+            InterceptionType interceptionType, ClassDesc interceptorClass, boolean isApplicationClass,
+            ParamVar interceptionTypeParam, ParamVar interceptorInstanceParam, ParamVar invocationContextParam) {
         if (interceptorMethods.isEmpty()) {
             return;
         }
-        BranchResult result = intercept
-                .ifTrue(Gizmo.equals(intercept, intercept.load(interceptionType), intercept.getMethodParam(0)));
-        BytecodeCreator trueBranch = result.trueBranch();
-        ResultHandle ret;
-        if (interceptorMethods.size() == 1) {
-            MethodInfo interceptorMethod = interceptorMethods.get(0);
-            ret = invokeInterceptorMethod(trueBranch, providerType.className(), interceptorMethod,
-                    interceptionType, isApplicationClass, trueBranch.getMethodParam(2), trueBranch.getMethodParam(1));
-        } else {
-            // Multiple interceptor methods found in the hierarchy
-            ResultHandle methodList = trueBranch.readInstanceField(
-                    FieldDescriptor.of(creator.getClassName(), interceptorMethodsField(interceptionType), List.class),
-                    trueBranch.getThis());
-            ResultHandle params;
-            if (interceptionType == InterceptionType.AROUND_INVOKE) {
-                params = trueBranch.invokeInterfaceMethod(MethodDescriptors.INVOCATION_CONTEXT_GET_PARAMETERS,
-                        trueBranch.getMethodParam(2));
+        b0.if_(b0.eq(Const.of(interceptionType), interceptionTypeParam), b1 -> {
+            Expr result;
+            if (interceptorMethods.size() == 1) {
+                MethodInfo interceptorMethod = interceptorMethods.get(0);
+                result = invokeInterceptorMethod(b1, interceptorClass, interceptorMethod,
+                        interceptionType, isApplicationClass, invocationContextParam, interceptorInstanceParam);
             } else {
-                params = trueBranch.loadNull();
-            }
-            ret = trueBranch.invokeStaticMethod(MethodDescriptors.INVOCATION_CONTEXTS_PERFORM_SUPERCLASS,
-                    trueBranch.getMethodParam(2), methodList,
-                    trueBranch.getMethodParam(1), params);
+                // Multiple interceptor methods found in the hierarchy
+                Expr list = cc.this_().field(FieldDesc.of(cc.type(), interceptorMethodsField(interceptionType), List.class));
+                Expr params;
+                if (interceptionType == InterceptionType.AROUND_INVOKE) {
+                    params = b1.invokeInterface(MethodDescs.INVOCATION_CONTEXT_GET_PARAMETERS, invocationContextParam);
+                } else {
+                    params = Const.ofNull(Object[].class);
+                }
+                result = b1.invokeStatic(MethodDescs.INVOCATION_CONTEXTS_PERFORM_SUPERCLASS,
+                        invocationContextParam, list, interceptorInstanceParam, params);
 
-        }
-        trueBranch.returnValue(InterceptionType.AROUND_INVOKE.equals(interceptionType) ? ret : trueBranch.loadNull());
+            }
+            b1.return_(InterceptionType.AROUND_INVOKE == interceptionType ? result : Const.ofNull(Object.class));
+        });
     }
 
     private String interceptorMethodsField(InterceptionType interceptionType) {
-        switch (interceptionType) {
-            case AROUND_INVOKE:
-                return "aroundInvokes";
-            case AROUND_CONSTRUCT:
-                return "aroundConstructs";
-            case POST_CONSTRUCT:
-                return "postConstructs";
-            case PRE_DESTROY:
-                return "preDestroys";
-            default:
-                throw new IllegalArgumentException("Unsupported interception type: " + interceptionType);
-        }
+        return switch (interceptionType) {
+            case AROUND_INVOKE -> "aroundInvokes";
+            case AROUND_CONSTRUCT -> "aroundConstructs";
+            case POST_CONSTRUCT -> "postConstructs";
+            case PRE_DESTROY -> "preDestroys";
+            default -> throw new IllegalArgumentException("Unsupported interception type: " + interceptionType);
+        };
     }
 
-    private ResultHandle invokeInterceptorMethod(BytecodeCreator creator, String interceptorClass, MethodInfo interceptorMethod,
-            InterceptionType interceptionType, boolean isApplicationClass, ResultHandle invocationContext,
-            ResultHandle interceptorInstance) {
-        Class<?> retType = null;
+    private Expr invokeInterceptorMethod(BlockCreator bc, ClassDesc interceptorClass, MethodInfo interceptorMethod,
+            InterceptionType interceptionType, boolean isApplicationClass, ParamVar invocationContext,
+            ParamVar interceptorInstance) {
+        Class<?> resultType;
         if (InterceptionType.AROUND_INVOKE.equals(interceptionType)) {
-            retType = Object.class;
+            resultType = Object.class;
         } else {
             // @PostConstruct, @PreDestroy, @AroundConstruct
-            retType = interceptorMethod.returnType().kind().equals(Type.Kind.VOID) ? void.class : Object.class;
+            resultType = interceptorMethod.returnType().kind().equals(Type.Kind.VOID) ? void.class : Object.class;
         }
-        ResultHandle ret;
         // Check if interceptor method uses InvocationContext or ArcInvocationContext
         Class<?> invocationContextClass;
         if (interceptorMethod.parameterType(0).name().equals(DotNames.INVOCATION_CONTEXT)) {
@@ -428,26 +372,17 @@ public class InterceptorGenerator extends BeanGenerator {
             invocationContextClass = ArcInvocationContext.class;
         }
         if (Modifier.isPrivate(interceptorMethod.flags())) {
-            privateMembers.add(isApplicationClass,
-                    String.format("Interceptor method %s#%s()", interceptorMethod.declaringClass().name(),
-                            interceptorMethod.name()));
-            // Use reflection fallback
-            ResultHandle paramTypesArray = creator.newArray(Class.class, creator.load(1));
-            creator.writeArrayValue(paramTypesArray, 0, creator.loadClass(invocationContextClass));
-            ResultHandle argsArray = creator.newArray(Object.class, creator.load(1));
-            creator.writeArrayValue(argsArray, 0, invocationContext);
+            privateMembers.add(isApplicationClass, String.format("Interceptor method %s#%s()",
+                    interceptorMethod.declaringClass().name(), interceptorMethod.name()));
             reflectionRegistration.registerMethod(interceptorMethod);
-            ret = creator.invokeStaticMethod(MethodDescriptors.REFLECTIONS_INVOKE_METHOD,
-                    creator.loadClass(interceptorMethod.declaringClass()
-                            .name()
-                            .toString()),
-                    creator.load(interceptorMethod.name()), paramTypesArray, interceptorInstance, argsArray);
+            Expr paramTypes = bc.newArray(Class.class, Const.of(invocationContextClass));
+            Expr args = bc.newArray(Object.class, invocationContext);
+            return bc.invokeStatic(MethodDescs.REFLECTIONS_INVOKE_METHOD,
+                    Const.of(classDescOf(interceptorMethod.declaringClass())),
+                    Const.of(interceptorMethod.name()), paramTypes, interceptorInstance, args);
         } else {
-            ret = creator.invokeVirtualMethod(
-                    MethodDescriptor.ofMethod(interceptorClass, interceptorMethod.name(), retType,
-                            invocationContextClass),
-                    interceptorInstance, invocationContext);
+            return bc.invokeVirtual(ClassMethodDesc.of(interceptorClass, interceptorMethod.name(),
+                    resultType, invocationContextClass), interceptorInstance, invocationContext);
         }
-        return ret;
     }
 }
